Mise a jour automatique

--- a/Web/design/css/home_made.less
+++ b/Web/design/css/home_made.less
@@ -1,3 +1,7 @@
+/*!
+* \file	home_made
+* \date	12 juin 2018
+*/
 @import 'home_made/colors';
 @import 'home_made/class';
 @import 'home_made/vars';
@@ -23,6 +27,7 @@ html {
 	font-family: Arial;
 }
 
+/*! \brief	Set the cursor as a pointer for every button */
 button {
 	cursor: pointer;
 }
