mise a jour web

--- a/Web/design/css/style.less
+++ b/Web/design/css/style.less
@@ -116,6 +116,9 @@ html {
 			}
 		}
 		main {
+			*::first-letter{
+				text-transform: uppercase;
+			}
 			.custom-select {
 				margin-right: 28%;
 				position: relative;
